--- a/src/MenuInicio.form
+++ b/src/MenuInicio.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="menu" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="527" height="400"/>
     </constraints>
     <properties>
       <background color="-11759351"/>
@@ -35,13 +35,16 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Bernard MT Condensed" size="36"/>
           <foreground color="-1"/>
           <text value="Bienvenido a canchas &quot;El Paraíso&quot;"/>
         </properties>
       </component>
       <component id="ff29f" class="javax.swing.JButton" binding="ingresarBtn">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-13274100"/>
@@ -52,7 +55,9 @@
       </component>
       <component id="94a23" class="javax.swing.JButton" binding="cerrarBtn">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-13274100"/>
