--- a/src/MenuInicio.form
+++ b/src/MenuInicio.form
@@ -43,12 +43,13 @@
       <component id="ff29f" class="javax.swing.JButton" binding="ingresarBtn">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="30"/>
+            <preferred-size width="-1" height="40"/>
           </grid>
         </constraints>
         <properties>
           <background color="-13274100"/>
           <focusable value="false"/>
+          <font size="20"/>
           <foreground color="-1"/>
           <text value="Ingresar"/>
         </properties>
@@ -56,12 +57,13 @@
       <component id="94a23" class="javax.swing.JButton" binding="cerrarBtn">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="30"/>
+            <preferred-size width="-1" height="40"/>
           </grid>
         </constraints>
         <properties>
           <background color="-13274100"/>
           <focusable value="false"/>
+          <font size="20"/>
           <foreground color="-1"/>
           <text value="Cerrar aplicación"/>
         </properties>
