--- a/src/Registro.form
+++ b/src/Registro.form
@@ -3,9 +3,11 @@
   <grid id="27dc6" binding="reg" layout-manager="GridLayoutManager" row-count="20" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="586"/>
+      <xy x="20" y="20" width="500" height="609"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-11759351"/>
+    </properties>
     <border type="none"/>
     <children>
       <hspacer id="3b227">
@@ -23,6 +25,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Bernard MT Condensed" size="36"/>
           <foreground color="-1"/>
           <text value="Registro"/>
         </properties>
@@ -42,6 +45,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Nombre:"/>
         </properties>
       </component>
@@ -57,6 +61,7 @@
           </grid>
         </constraints>
         <properties>
+          <font size="16"/>
           <text value=""/>
         </properties>
       </component>
@@ -65,6 +70,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Apellidos:"/>
         </properties>
       </component>
@@ -74,13 +80,16 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font size="16"/>
+        </properties>
       </component>
       <component id="ccd4f" class="javax.swing.JLabel">
         <constraints>
           <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Número de cédula o pasaporte:"/>
         </properties>
       </component>
@@ -91,6 +100,7 @@
           </grid>
         </constraints>
         <properties>
+          <font size="16"/>
           <text value=""/>
         </properties>
       </component>
@@ -99,6 +109,7 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Número de celular:"/>
         </properties>
       </component>
@@ -108,13 +119,16 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font size="16"/>
+        </properties>
       </component>
       <component id="34655" class="javax.swing.JLabel">
         <constraints>
           <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Correo electrónico:"/>
         </properties>
       </component>
@@ -124,13 +138,16 @@
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <font size="16"/>
+        </properties>
       </component>
       <component id="7d8dd" class="javax.swing.JLabel">
         <constraints>
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Fecha de nacimiento:"/>
         </properties>
       </component>
@@ -146,9 +163,14 @@
       </vspacer>
       <component id="f3eed" class="javax.swing.JButton" binding="cancelarButton" default-binding="true">
         <constraints>
-          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="40"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-13274100"/>
+          <font size="20"/>
+          <foreground color="-1"/>
           <text value="Cancelar"/>
         </properties>
       </component>
@@ -159,14 +181,20 @@
           </grid>
         </constraints>
         <properties>
+          <font size="16"/>
           <text value=""/>
         </properties>
       </component>
       <component id="80393" class="javax.swing.JButton" binding="registrarButton" default-binding="true">
         <constraints>
-          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="40"/>
+          </grid>
         </constraints>
         <properties>
+          <background color="-13274100"/>
+          <font size="20"/>
+          <foreground color="-1"/>
           <text value="Registrar"/>
         </properties>
       </component>
