--- a/src/Registro.form
+++ b/src/Registro.form
@@ -45,6 +45,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Nombre:"/>
         </properties>
@@ -70,6 +71,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Apellidos:"/>
         </properties>
@@ -89,6 +91,7 @@
           <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Número de cédula o pasaporte:"/>
         </properties>
@@ -109,6 +112,7 @@
           <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Número de celular:"/>
         </properties>
@@ -128,6 +132,7 @@
           <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Correo electrónico:"/>
         </properties>
@@ -147,6 +152,7 @@
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Fecha de nacimiento:"/>
         </properties>
