--- a/src/login.form
+++ b/src/login.form
@@ -74,6 +74,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Nombre:"/>
         </properties>
@@ -83,6 +84,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font size="16"/>
           <foreground color="-1"/>
           <text value="Contraseña:"/>
         </properties>
