--- a/src/login.form
+++ b/src/login.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="login">
-  <grid id="27dc6" binding="log" layout-manager="GridLayoutManager" row-count="13" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="log" layout-manager="GridLayoutManager" row-count="14" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="364"/>
+      <xy x="20" y="20" width="500" height="389"/>
     </constraints>
     <properties>
       <background color="-13274100"/>
@@ -92,22 +92,22 @@
           <background color="-11759351"/>
           <font size="20"/>
           <foreground color="-1"/>
-          <text value="Ingresar"/>
+          <text value="Iniciar"/>
         </properties>
       </component>
       <component id="f6617" class="javax.swing.JLabel" binding="Registro">
         <constraints>
-          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font size="20"/>
-          <foreground color="-1"/>
-          <text value="Registro"/>
+          <font size="18"/>
+          <foreground color="-11883306"/>
+          <text value="Registrese"/>
         </properties>
       </component>
       <vspacer id="b7e29">
         <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="f282c" class="javax.swing.JLabel" binding="ver">
@@ -123,10 +123,19 @@
       <component id="d1c86" class="javax.swing.JPasswordField" binding="clave">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="25"/>
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="9d533" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-1"/>
+          <text value="Si no tiene una cuenta"/>
+        </properties>
       </component>
     </children>
   </grid>
