Forms para cada usuario y clase usuario. Registro con confirmacion de contraseña

--- a/src/login.form
+++ b/src/login.form
@@ -92,7 +92,7 @@
           <background color="-11759351"/>
           <font size="20"/>
           <foreground color="-1"/>
-          <text value="Iniciar"/>
+          <text value="Iniciar sesión"/>
         </properties>
       </component>
       <component id="f6617" class="javax.swing.JLabel" binding="Registro">
