--- a/src/Forms/buscarc.form
+++ b/src/Forms/buscarc.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="9851f" class="javax.swing.JTable" binding="table1" default-binding="true">
+      <component id="9851f" class="javax.swing.JTable" binding="canc">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
