--- a/src/Forms/editarJugadores.form
+++ b/src/Forms/editarJugadores.form
@@ -5,18 +5,20 @@
     <constraints>
       <xy x="20" y="20" width="500" height="901"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-14473879"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="a5de" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="30"/>
-          </grid>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Bernard MT Condensed" size="24"/>
+          <foreground color="-1"/>
           <text value="Editar Jugadores"/>
+          <verticalAlignment value="0"/>
         </properties>
       </component>
       <vspacer id="aeb70">
@@ -35,11 +37,10 @@
       </vspacer>
       <component id="20b4" class="javax.swing.JLabel" binding="cit">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="17"/>
-          </grid>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Cédula:"/>
         </properties>
       </component>
@@ -58,6 +59,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-9064132"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Buscar"/>
         </properties>
       </component>
@@ -68,6 +72,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1319217"/>
+          <focusable value="false"/>
+          <foreground color="-16777216"/>
           <text value="Nombre"/>
         </properties>
       </component>
@@ -78,6 +85,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1319217"/>
+          <focusable value="false"/>
+          <foreground color="-16777216"/>
           <text value="Apellido"/>
         </properties>
       </component>
@@ -88,6 +98,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1319217"/>
+          <focusable value="false"/>
+          <foreground color="-16777216"/>
           <text value="Correo"/>
         </properties>
       </component>
@@ -98,6 +111,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1319217"/>
+          <focusable value="false"/>
+          <foreground color="-16777216"/>
           <text value="Fecha Nacimiento"/>
         </properties>
       </component>
@@ -108,6 +124,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1319217"/>
+          <focusable value="false"/>
+          <foreground color="-16777216"/>
           <text value="Telefono"/>
         </properties>
       </component>
@@ -118,6 +137,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1319217"/>
+          <focusable value="false"/>
+          <foreground color="-16777216"/>
           <text value="Contraseña"/>
         </properties>
       </component>
@@ -176,6 +198,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-9064132"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Verificar"/>
         </properties>
       </component>
@@ -186,6 +211,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-1744027"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Regresar a Gestión de Usuarios"/>
         </properties>
       </component>
@@ -196,6 +224,9 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-9064132"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Elegir otro campo"/>
         </properties>
       </component>
@@ -206,36 +237,36 @@
           </grid>
         </constraints>
         <properties>
+          <background color="-9064132"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Actualizar"/>
         </properties>
       </component>
       <component id="d63b" class="javax.swing.JLabel" binding="ver1">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="0"/>
-          </grid>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value=""/>
         </properties>
       </component>
       <component id="dcef2" class="javax.swing.JLabel" binding="txt">
         <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="0"/>
-          </grid>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value=""/>
         </properties>
       </component>
       <component id="aee66" class="javax.swing.JLabel" binding="ver2">
         <constraints>
-          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="252" height="0"/>
-          </grid>
+          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value=""/>
         </properties>
       </component>
