--- a/src/Forms/gestionJugadores.form
+++ b/src/Forms/gestionJugadores.form
@@ -69,12 +69,21 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-14474461"/>
+          <foreground color="-1"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="60d26" class="javax.swing.JTable" binding="tabl">
             <constraints/>
-            <properties/>
+            <properties>
+              <background color="-14474461"/>
+              <foreground color="-1"/>
+              <gridColor color="-1"/>
+              <selectionBackground color="-16569490"/>
+              <selectionForeground color="-1"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
