--- a/src/Forms/fecha.form
+++ b/src/Forms/fecha.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-11883306"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="230a7" class="com.toedter.calendar.JDateChooser" binding="fec" custom-create="true">
@@ -20,6 +22,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-1"/>
           <text value="Elija el día a reservar:"/>
         </properties>
       </component>
@@ -28,6 +31,8 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-11759351"/>
+          <foreground color="-1"/>
           <text value="Buscar"/>
         </properties>
       </component>
@@ -65,6 +70,8 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-1744027"/>
+          <foreground color="-1"/>
           <text value="Regresar"/>
         </properties>
       </component>
