Registro de canchas con imagenes y muestra de imagenes en la tabla de inicio, creación de la clase ImageRenderer para renderizar la imagen ingresada Cambio de logo pestañas

--- a/src/Forms/buscarc.form
+++ b/src/Forms/buscarc.form
@@ -42,6 +42,7 @@
         </constraints>
         <properties>
           <background color="-1744027"/>
+          <foreground color="-1"/>
           <text value="Regresar"/>
         </properties>
       </component>
