--- a/src/Forms/MenuInicio.form
+++ b/src/Forms/MenuInicio.form
@@ -78,12 +78,11 @@
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="a8df1" class="javax.swing.JLabel">
+      <component id="a8df1" class="javax.swing.JLabel" binding="img">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="icono/Imagen1.png"/>
           <text value=""/>
         </properties>
       </component>
