--- a/src/Forms/login.form
+++ b/src/Forms/login.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="log" layout-manager="GridLayoutManager" row-count="16" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="446"/>
+      <xy x="20" y="20" width="500" height="452"/>
     </constraints>
     <properties>
       <background color="-13274100"/>
@@ -139,7 +139,7 @@
           <text value="¿Si no tiene una cuenta?"/>
         </properties>
       </component>
-      <component id="7e4db" class="javax.swing.JButton" binding="volverAlMenúDeButton" default-binding="true">
+      <component id="7e4db" class="javax.swing.JButton" binding="volverBtn">
         <constraints>
           <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="40"/>
